apps/monitoring/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: monitoring
    homelab.local/OwnedBy: ElPoshoX
    # node-exporter requires hostNetwork, hostPID, hostPath
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
